--- a/CPE200Lab1/CPE200Lab1/CPE200Lab1.csproj
+++ b/CPE200Lab1/CPE200Lab1/CPE200Lab1.csproj
@@ -45,6 +45,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CalculateEngine.cs" />
+    <Compile Include="CalculatorEngine.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
