--- a/CPE200Lab1/CPE200Lab1/CPE200Lab1.csproj
+++ b/CPE200Lab1/CPE200Lab1/CPE200Lab1.csproj
@@ -60,6 +60,10 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RPNCalculatorEngine.cs" />
+    <Compile Include="RPNFrom.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <EmbeddedResource Include="ExtendForm.resx">
       <DependentUpon>ExtendForm.cs</DependentUpon>
     </EmbeddedResource>
