--- a/CPE200Lab1/CPE200Lab1/CPE200Lab1.csproj
+++ b/CPE200Lab1/CPE200Lab1/CPE200Lab1.csproj
@@ -60,8 +60,8 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RPNCALCULATORENGINE.cs" />
-    <Compile Include="RPNFROM.cs">
+    <Compile Include="RPNCalculatorEngine.cs" />
+    <Compile Include="RPNForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <EmbeddedResource Include="ExtendForm.resx">
