--- a/CPE200Lab1/CPE200Lab1/CPE200Lab1.csproj
+++ b/CPE200Lab1/CPE200Lab1/CPE200Lab1.csproj
@@ -45,14 +45,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CalculatorController.cs" />
     <Compile Include="CalculatorEngine.cs" />
+    <Compile Include="NewCalculatorEngine.cs" />
+    <Compile Include="CalculatorModel.cs" />
+    <Compile Include="Controller.cs" />
+    <Compile Include="Model.cs" />
     <Compile Include="SimpleCalculatorEngine.cs" />
-    <Compile Include="ExtendForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="ExtendForm.Designer.cs">
-      <DependentUpon>ExtendForm.cs</DependentUpon>
-    </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -67,9 +66,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>TextTemplate1.tt</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="ExtendForm.resx">
-      <DependentUpon>ExtendForm.cs</DependentUpon>
-    </EmbeddedResource>
+    <Compile Include="View.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
