สร้าง new class Controller แล้วเขื่อม classเเข้าด้วยกันโดยที่ Controller เรียก RPNCalculatorEngine and CalculatorEngine

--- a/CPE200Lab1/CPE200Lab1/CPE200Lab1.csproj
+++ b/CPE200Lab1/CPE200Lab1/CPE200Lab1.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
     <Compile Include="CalculatorEngine.cs" />
     <Compile Include="Class1.cs" />
+    <Compile Include="Controller.cs" />
     <Compile Include="ExtendForm.cs">
       <SubType>Form</SubType>
     </Compile>
